--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -1,2 +1,2 @@
 <meta http-equiv="refresh" content="1">
-{{ .rate }} MB/s from {{ .from }}
+{{ .rateMB }} MB/s / {{ .rateKB }} KB/s from {{ .from }}
